# zerodisk

./: .gitignore  Cargo.toml  README.md  test.rt
client/: .gitignore
client/src/: main.rs
client/src/app/: app.rs  arrow.rs  mod.rs  ports.rs
client/src/dispatcher/: dispatcher.rs  events.rs  mod.rs
client/src/gpu/: mod.rs  shader.wgsl
client/src/helpers/: angle_direct.rs  distance.rs  middle.rs  mod.rs
client/src/meshes/: mod.rs  ports.rs  rectangle.rs  square.rs  triangle.rs
client/src/object/: builder.rs  object.rs
client/src/primitive/color/: builder.rs
client/src/primitive/point/: builder.rs  (+2 more)
client/src/scene/: mod.rs  scene.rs
client/src/uniq_id/: mod.rs
server/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  init.lua
server/src/: lib.rs
server/src/service/: start.rs
src/: #main.rs#  .#main.rs  main.rs  main.rs~  object.rs  state.rs
src/constraints/: between.rs  direct.rs  mod.rs
src/gpu/: mod.rs  ports.rs  shader.wgsl  state.rs
src/helpers/: angle_direct.rs
src/meshes/: mod.rs
src/object/: builder.rs  mod.rs  object.rs
src/objects/: helpers.rs  mod.rs  object.rs  scene.rs  square.rs  triangle.rs  types.rs
src/objects/square/: builder.rs  mod.rs  square.rs
src/objects/triangle/: builder.rs  mod.rs  triangle.rs
src/primitive/: mod.rs
src/primitive/color/: builder.rs  color.rs  mod.rs
src/primitive/point/: builder.rs  point.rs
src/primitive/triangle/: mod.rs  triangle.rs
src/scene/: mod.rs  scene.rs  tests.rs  tracer.rs
src/scene/tracer/: mod.rs  tracer.rs  triangle_and_point.rs  triangle_has_point.rs
(+6 files in other folders)
