[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.20"
wgpu = "0.17.0"
winit = "0.28.6"
