[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.20"
wgpu = "0.13.0"
winit = "0.26.0"
